refactor : 이동전략 변경으로 인한 테스트 변경 및 리팩토링